# gtassm

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac
data/: gtassm.glade
src/: Makefile.am
